@@ -1,0 +1,2 @@
+#name: Ill-formed directives
+#error-output: pseudo.l
